tests/baselines/reference/privateNameDeclaration.errors.txt
privateNameDeclaration.ts(2,5): error TS2564: Property '#foo' has no initializer and is not definitely assigned in the constructor.
privateNameDeclaration.ts(4,5): error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.


==== privateNameDeclaration.ts (2 errors) ====
    class A {
        #foo: string;
        ~~~~
!!! error TS2564: Property '#foo' has no initializer and is not definitely assigned in the constructor.
        #bar = 6;
        baz: string;
        ~~~
!!! error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
        qux = 6;
        quux(): void {
    
        }
    }
    